--- a/qsomap/templates/base.html
+++ b/qsomap/templates/base.html
@@ -13,17 +13,13 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container">
-            <a class="navbar-brand" href="{{ url_for('index') }}">moja aplikacja</a>
+            <a class="navbar-brand" href="{{ url_for('index') }}">Adif QSO Map</a>
         </div>
     </nav>
     <div class="container mt-4">
         {% block content %}{% endblock %}
     </div>
-    <footer class="bg-primary text-white text-center py-3 mt-5">
-        <div class="container">
-            <p class="mb-0">To jest przykładowa stopka aplikacji.</p>
-        </div>
-    </footer>
+   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     {% block scripts %}{% endblock %}
 </body>
