update images and add validation adif extension

--- a/qsomap/templates/main.html
+++ b/qsomap/templates/main.html
@@ -18,8 +18,8 @@
                             <input type="text" class="form-control" id="my_locator" name="my_locator" required>
                         </div>
                         <div class="mb-3">
-                            <label for="file" class="form-label">Choose Log File</label>
-                            <input type="file" class="form-control" id="file" name="file" required>
+                            <label for="file" class="form-label">Choose Log File (ADIF/ADI)</label>
+                            <input type="file" class="form-control" id="file" name="file" accept=".adif,.adi" required>
                         </div>
                         <button type="submit" class="btn btn-primary">Show map</button>
                     </form>
