--- a/qsomap/templates/qso_list.html
+++ b/qsomap/templates/qso_list.html
@@ -22,6 +22,10 @@
                     <input class="form-check-input" type="checkbox" id="uniform-color-checkbox" checked>
                     <label class="form-check-label" for="uniform-color-checkbox">Color Pins Band</label>
                 </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="checkbox" id="hide-lines-checkbox">
+                    <label class="form-check-label" for="hide-lines-checkbox">Hide Lines</label>
+                </div>
                 <button id="show-stats-button" class="btn btn-primary">Show Statistics</button>
                 <button id="night-mode-button" class="btn btn-dark">Toggle Night Mode</button>
             </div>
