--- a/qsomap/templates/main.html
+++ b/qsomap/templates/main.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Strona główna{% endblock %}
+{% block title %}Ham Log Map{% endblock %}
 
 {% block content %}
 
