add gunicorn configuration

--- a/qsomap/templates/error.html
+++ b/qsomap/templates/error.html
@@ -93,7 +93,7 @@
         <a href="mailto:sp3wkw@gmail.com" class="error-email">sp3wkw@gmail.com</a>
 
         <p class="error-footer">
-            Your message will help us improve our service
+            Your message will help us improve our project
         </p>
     </div>
 </body>
