--- a/qsomap/templates/base.html
+++ b/qsomap/templates/base.html
@@ -26,6 +26,8 @@
     <footer class="bg-light mt-5 py-3 border-top">
         <div class="container text-center">
             <small class="text-muted">created by SP3WKW</small>
+            <br>
+            <small class="text-muted">v{{ app_version }}</small>
         </div>
     </footer>
 </body>
