--- a/qsomap/templates/main.html
+++ b/qsomap/templates/main.html
@@ -64,7 +64,14 @@
                         </div>
                         <div class="mb-3">
                             <label for="my_locator" class="form-label">Locator</label>
-                            <input type="text" class="form-control" id="my_locator" name="my_locator" required>
+                            <input type="text"
+                                   class="form-control"
+                                   id="my_locator"
+                                   name="my_locator"
+                                   placeholder="e.g., JO70fp"
+                                   pattern="^[A-Ra-r]{2}[0-9]{2}([A-Xa-x]{2}([0-9]{2})?)?$"
+                                   title="Please enter a valid Maidenhead locator (e.g., JO70, JO70fp, JO70fp12)"
+                                   required>
                         </div>
                         <div class="mb-3">
                             <label for="file" class="form-label">Choose Log File (ADIF/ADI)</label>
